# telef-solver

./: CMakeLists.txt  CMakeLists.txt.in  README.md  telef-solver.pc.in
examples/: test_app.cpp
include/solver/: costFunction.h  parameterBlock.h  problem.h  residualBlock.h  residualFunction.h  solver.h
include/solver/gpu/: gpuParameterBlock.h  gpuProblem.h  gpuResidualBlock.h  gpuResidualFunction.h  gpuSolver.h
include/solver/gpu/cuda/: cu_residual.h  cu_resudual.h  cu_solver.h
include/solver/util/: cudautil.h  fileio.h  profile.h
include/util/: cudautil.h
src/solver/: residualFunction.cpp  solver.cpp
src/solver/gpu/: gpuResidualFunction.cpp  gpuSolver.cpp
src/solver/gpu/cuda/: cu_residual.cu  cu_solver.cu
test/: CMakeLists.txt  mock_gpu.cpp  mock_gpu.h  mock_powell.cpp  mock_rigid.cpp  test_gpu_residualFunction.cpp  test_gpu_solver.cpp
test/cuda/: cuda_align.cu  cuda_align.h  cuda_kernel.cu  cuda_kernel.h  cuda_loss.cu  cuda_loss.h  cuda_powell.cu  cuda_powell.h  cuda_quaternion.cu  cuda_quaternion.h
test/data/rigidFit/: actualPoints.data  scan_mesh.data  sourcePoints.data  targetPoints.data
